--- a/toDoApp/src/data/tasks.json
+++ b/toDoApp/src/data/tasks.json
@@ -1,18 +1,11 @@
 {
   "tasks": [
     {
-      "id": "1709044961264",
-      "isCompleted": false,
-      "title": "walk the dogs",
-      "dueDate": "2024-02-27T16:47:00.000Z",
-      "isUrgent": true
-    },
-    {
       "id": "1709045052090",
       "isCompleted": false,
       "title": "go for a run",
-      "dueDate": "2024-02-28T06:40:00.000Z",
-      "isUrgent": false
+      "dueDate": "2024-02-28T06:44:00.000Z",
+      "isUrgent": true
     },
     {
       "id": "1709046834960",
@@ -20,13 +13,6 @@
       "title": "wash the dishes",
       "dueDate": "2024-02-27T15:43:00.000Z",
       "isUrgent": true
-    },
-    {
-      "id": "1709047368730",
-      "isCompleted": false,
-      "title": "get a good nights sleep",
-      "dueDate": "2024-02-27T15:26:00.000Z",
-      "isUrgent": false
     },
     {
       "id": "1709053521974",
@@ -40,6 +26,27 @@
       "isCompleted": false,
       "title": "make a to do list",
       "dueDate": "2024-02-28T17:06:00.000Z",
+      "isUrgent": false
+    },
+    {
+      "id": "1709099488282",
+      "isCompleted": false,
+      "title": "walk the dogs",
+      "dueDate": "2024-02-28T06:09:00.000Z",
+      "isUrgent": true
+    },
+    {
+      "id": "1709099849664",
+      "isCompleted": false,
+      "title": "go see a movie",
+      "dueDate": "2024-03-02T05:57:00.000Z",
+      "isUrgent": false
+    },
+    {
+      "id": "1709099859296",
+      "isCompleted": false,
+      "title": "meet friends",
+      "dueDate": "2024-03-10T10:00:00.000Z",
       "isUrgent": false
     }
   ]
